# whiskers-launcher-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/action/: mod.rs
src/actions/: mod.rs
src/api/: mod.rs
src/api/apps/: mod.rs
src/api/extensions/: mod.rs
src/api/settings/: mod.rs
src/dialog/: mod.rs
src/extension/: mod.rs
src/extensions/: mod.rs
src/indexing/: mod.rs
src/others/: mod.rs
src/paths/: mod.rs
src/result/: mod.rs
src/results/: mod.rs
src/settings/: mod.rs
src/utils/: mod.rs
