[package]
name = "simple_kl_rs"
version = "0.0.0"
edition = "2021"
description = "A crate containing all necessary code related to Simple Keyboard Launcher"
repository = "https://github.com/lighttigerXIV/simple-kl-rs"
license = "MIT"
keywords = ["productivity"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
dirs = "5.0.1"
notify-rust = "4.9.0"
bincode = "1.3.3"

[target.'cfg(target_os = "windows")'.dependencies]
powershell_script = "1.1.0"