[package]
name = "whiskers-launcher-rs"
version = "1.0.0"
edition = "2021"
description = "A crate containing all necessary code related to Whiskers Launcher"
repository = "https://github.com/lighttigerXIV/whiskers-launcher-rs"
license = "MIT"
keywords = ["productivity"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
dirs = "5.0.1"
notify-rust = "4.9.0"
walkdir = "2.4.0"
bincode = "1.3.3"


[target.'cfg(target_os = "windows")'.dependencies]
powershell_script = "1.1.0"
