[package]
name = "whiskers-launcher-rs"
version = "2.0.0"
edition = "2021"
description = "A crate containing core functionality for Whiskers Launcher and it's extensions"
repository = "https://github.com/Whiskers-Apps/whiskers-launcher-rs"
license = "MIT"
keywords = ["productivity"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
dirs = "5.0.1"
notify-rust = "4.9.0"
walkdir = "2.4.0"
bincode = "1.3.3"
fuzzy-matcher = "0.3.7"


[target.'cfg(target_os = "windows")'.dependencies]
powershell_script = "1.1.0"
mslnk = "0.1.8"